[gd_scene load_steps=20 format=3 uid="uid://cuq57gnl0xn2m"]

[ext_resource type="Script" uid="uid://b0ikb4va3mlaf" path="res://scenes/dev/ZXue/LaserShroom/LaserShroomEnemy.gd" id="1_6e0eo"]
[ext_resource type="Script" uid="uid://dcfoaiv83pvo4" path="res://scripts/utility/states/state_machine.gd" id="2_pxf1l"]
[ext_resource type="Script" uid="uid://14v6se6ehp7y" path="res://scripts/entities/enemies/states/enemy_wait.gd" id="3_arhvd"]
[ext_resource type="Script" uid="uid://c1iptw5vqre6f" path="res://scripts/entities/enemies/attacks/hitbox.gd" id="3_dkojg"]
[ext_resource type="Script" uid="uid://b2t1awuy1mis7" path="res://scripts/entities/enemies/states/move_to_player.gd" id="4_arhvd"]
[ext_resource type="Script" uid="uid://bopvog2l4xqc" path="res://scenes/dev/ZXue/LaserShroom/state_lockon.gd" id="5_s1jrn"]
[ext_resource type="Script" uid="uid://dfduxqv1wui16" path="res://scenes/dev/ZXue/LaserShroom/state_fire.gd" id="6_sbhox"]
[ext_resource type="Script" uid="uid://dtitauqx0skm" path="res://scenes/dev/ZXue/LaserShroom/state_hide.gd" id="7_eqsdo"]
[ext_resource type="Material" uid="uid://eaw3fdki5ha1" path="res://art_assets/environment/demo/Models/goldDemo.tres" id="7_iil6r"]
[ext_resource type="Material" uid="uid://dpp3p3xiu4weh" path="res://art_assets/environment/demo/Models/glowDemo.tres" id="8_27v6w"]
[ext_resource type="Script" uid="uid://bkgp46pi8byeg" path="res://scenes/dev/ZXue/LaserShroom/state_broken.gd" id="8_arhvd"]
[ext_resource type="Script" uid="uid://irxuylaptnty" path="res://scripts/entities/enemies/states/dead.gd" id="9_arhvd"]
[ext_resource type="PackedScene" uid="uid://pv4ghgiiejhk" path="res://scenes/dev/christian_d/enemy_status_bar.tscn" id="13_g51g3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pxf1l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pxf1l"]
size = Vector3(15, 1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_s1jrn"]
material = ExtResource("7_iil6r")
size = Vector3(15, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_iil6r"]
material = ExtResource("8_27v6w")
size = Vector3(15, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pxf1l"]

[sub_resource type="ViewportTexture" id="ViewportTexture_yed7e"]
viewport_path = NodePath("SubViewport")

[node name="LaserShroom" type="CharacterBody3D"]
collision_layer = 10
script = ExtResource("1_6e0eo")
metadata/_custom_type_script = "uid://b0ikb4va3mlaf"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.075, 0, 0, 0, 1.075, 0, 0, 0, 1.075, 0, 1, 0)
shape = SubResource("CapsuleShape3D_pxf1l")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_pxf1l")
metadata/_custom_type_script = "uid://dcfoaiv83pvo4"

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("post_wait_state", "player_far_state")]
script = ExtResource("3_arhvd")
post_wait_state = NodePath("../approach")
max_player_distance = 20.0
player_far_state = NodePath(".")

[node name="approach" type="Node" parent="StateMachine" node_paths=PackedStringArray("reached_enemy_state")]
script = ExtResource("4_arhvd")
attack_distance = 10.0
reached_enemy_state = NodePath("../lockon")

[node name="lockon" type="Node" parent="StateMachine" node_paths=PackedStringArray("lost_track_state", "post_lock_state")]
script = ExtResource("5_s1jrn")
lost_track_state = NodePath("../approach")
post_lock_state = NodePath("../fire")

[node name="LockTimer" type="Timer" parent="StateMachine/lockon"]
one_shot = true

[node name="fire" type="Node" parent="StateMachine" node_paths=PackedStringArray("post_fire_state")]
script = ExtResource("6_sbhox")
post_fire_state = NodePath("../hide")

[node name="FireTimer" type="Timer" parent="StateMachine/fire"]
one_shot = true

[node name="FireEffectTimer" type="Timer" parent="StateMachine/fire"]
one_shot = true

[node name="DamageCooldownTimer" type="Timer" parent="StateMachine/fire"]
one_shot = true

[node name="hide" type="Node" parent="StateMachine" node_paths=PackedStringArray("post_hide_state")]
script = ExtResource("7_eqsdo")
post_hide_state = NodePath("../approach")

[node name="HideTimer" type="Timer" parent="StateMachine/hide"]

[node name="broken" type="Node" parent="StateMachine"]
script = ExtResource("8_arhvd")

[node name="dead" type="Node" parent="StateMachine"]
script = ExtResource("9_arhvd")

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 1, 0)
collision_mask = 2
script = ExtResource("3_dkojg")
metadata/_custom_type_script = "uid://c1iptw5vqre6f"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.739915, 0, 0)
shape = SubResource("BoxShape3D_pxf1l")

[node name="AimMesh" type="MeshInstance3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.7461843, 0, 0)
visible = false
mesh = SubResource("BoxMesh_s1jrn")

[node name="FireMesh" type="MeshInstance3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.732189, 0, 0)
visible = false
mesh = SubResource("BoxMesh_iil6r")

[node name="LaserShroomMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_pxf1l")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="StatusBars" parent="." instance=ExtResource("13_g51g3")]
transform = Transform3D(0.70710677, -0.4055798, 0.579228, 0, 0.81915206, 0.57357645, -0.70710677, -0.4055798, 0.579228, 0, 2.6692805, 0)
texture = SubResource("ViewportTexture_yed7e")

[connection signal="timeout" from="StateMachine/lockon/LockTimer" to="StateMachine/lockon" method="_on_lock_timer_timeout"]
[connection signal="timeout" from="StateMachine/fire/FireTimer" to="StateMachine/fire" method="_on_fire_timer_timeout"]
[connection signal="timeout" from="StateMachine/fire/FireEffectTimer" to="StateMachine/fire" method="_on_fire_effect_timer_timeout"]
[connection signal="timeout" from="StateMachine/fire/DamageCooldownTimer" to="StateMachine/fire" method="_on_damage_cooldown_timer_timeout"]
[connection signal="timeout" from="StateMachine/hide/HideTimer" to="StateMachine/hide" method="_on_hide_timer_timeout"]
